feat(package-json): add homepage address

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mayconbalves.github.io/horror-histories",
   "name": "horror-histories",
   "version": "0.1.0",
   "private": true,
