--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix",
-      "yarn test --findRelatedTests --bail"
+      "yarn lint --fix"
     ]
   },
   "eslintConfig": {
