--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "react-scripts test",
     "lint": "eslint src",
     "test:watch": "yarn test --watch",
+    "test:coverage": "yarn test  --coverage --watchAll",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
